--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@reduxjs/toolkit": "^2.2.2",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
