--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
+    "@types/node": "20.11.30",
+    "@types/react": "18.2.73",
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.9.0",
     "eslint": "8.57.0",
